--- a/templates/layout.html
+++ b/templates/layout.html
@@ -31,7 +31,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link {% block active1 %} {% endblock %}" href="/accounts/profile/">Home</a>
+                        <a class="nav-link {% block active1 %} {% endblock %}" href="/">Shops</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link {% block active2 %} {% endblock %}" href="/cart">Cart</a>
@@ -43,7 +43,7 @@
             </div>
 
             <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-                <a href="/" class="btn btn-outline-light me-2" type="button">Call us!</a>
+                <a href="#contacts" class="btn btn-outline-light me-2" type="button">More info</a>
             </div>
         </div>
     </nav>
