--- a/templates/shops_page.html
+++ b/templates/shops_page.html
@@ -8,7 +8,7 @@
     <h4 class="title">Shops page</h4>
     <div class="container">
         <div class="row">
-            <div class="col-md-3 rounded text-center" style="background-color: #D991BA">
+            <div class="col-lg-3 rounded text-center" style="background-color: #D991BA">
                 <p style="margin-top: 20px"><b>Shops</b></p>
                 <div class="row row-cols-1 g-3">
                     {% for shop in shops %}
