--- a/templates/shops_page.html
+++ b/templates/shops_page.html
@@ -17,6 +17,7 @@
                     </div>
                     {% endfor %}
                 </div>
+                <p style="margin-top: 20px"></p>
             </div>
             <div class="col-md-9">
                 <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
