--- a/templates/shops_page.html
+++ b/templates/shops_page.html
@@ -7,8 +7,8 @@
 {% block content %}
     <h4 class="title">Shops page</h4>
     <div class="container">
-        <div class="row">
-            <div class="col-lg-3 rounded text-center" style="background-color: #D991BA">
+        <div class="row row-cols-sm-1">
+            <div class="col-lg-3 rounded text-center mb-lg-0" style="background-color: #D991BA; margin-bottom: 20px">
                 <p style="margin-top: 20px"><b>Shops</b></p>
                 <div class="row row-cols-1 g-3">
                     {% for shop in shops %}
@@ -19,7 +19,7 @@
                 </div>
                 <p style="margin-top: 20px"></p>
             </div>
-            <div class="col-md-9">
+            <div class="col-lg-9">
                 <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
                     {% for product in products %}
                     <div class="col">
