--- a/templates/shops_page.html
+++ b/templates/shops_page.html
@@ -38,6 +38,14 @@
                 </div>
             </div>
         </div>
-</div>
+    </div>
+
+{#    <div>#}
+{#        {% for i in '012345'|make_list %}#}
+{#            {% for j in 'abcdef'|make_list %}#}
+{#                {{ j }} {{ i }}#}
+{#            {% endfor %}#}
+{#        {% endfor %}#}
+{#    </div>#}
 
 {% endblock %}
