--- a/templates/shopping_cart_page.html
+++ b/templates/shopping_cart_page.html
@@ -32,21 +32,23 @@
                 </div>
                 <div class="col-md-6 rounded text-center">
                     <div class="row row-cols-1 row-cols-lg-2 g-4">
-                        {% for selected_product in cart %}
-                            {% if selected_product.quantity > 0 %}
+                        {% for product in products %}
+                            {% if product.selected_product.quantity > 0 %}
                             <div class="col">
                                 <div class="card" style="background-color: #FFB17A">
                                     <div class="card-body text-center">
-                                        <p><b>{{ selected_product.name }}</b></p>
+                                        <p><b>{{ product.selected_product.name }}</b></p>
                                         {% load static %}
-                                        <img src="{% static 'images/' %}{{ selected_product.product_id }}.jpg" alt="Image {{ selected_product.product_id }}" style="width:200px; height: 150px">
-                                        <p style="margin-top: 10px">Quantity: {{ selected_product.quantity }}</p>
+                                        <img src="{% static 'images/' %}{{ product.selected_product.product_id }}.jpg" alt="Image {{ product.selected_product.product_id }}" style="width:200px; height: 150px">
+                                        <p style="margin-top: 10px">{{ product.name }}</p>
+                                        <p>Price: {{ product.price }}</p>
+                                        <p>Quantity: {{ product.selected_product.quantity }}</p>
                                         <div class="row row-cols-2 g-2">
                                             <div class="col">
-                                                <a href="/add_to_cart/{{ selected_product.product_id }}" class="btn btn-custom" style="margin-bottom: 10px; background-color: rgba(0, 0, 0, 0.2); width: 50px; text-align: center">+</a>
+                                                <a href="/add_to_cart/{{ product.selected_product.product_id }}" class="btn btn-custom" style="margin-bottom: 10px; background-color: rgba(0, 0, 0, 0.2); width: 50px; text-align: center">+</a>
                                             </div>
                                             <div class="col">
-                                                <a href="/delete_from_cart/{{ selected_product.product_id }}" class="btn btn-custom" style="margin-bottom: 10px; background-color: rgba(0, 0, 0, 0.2); width: 50px; text-align: center">-</a>
+                                                <a href="/delete_from_cart/{{ product.selected_product.product_id }}" class="btn btn-custom" style="margin-bottom: 10px; background-color: rgba(0, 0, 0, 0.2); width: 50px; text-align: center">-</a>
                                             </div>
                                         </div>
                                     </div>
