--- a/templates/shopping_cart_page.html
+++ b/templates/shopping_cart_page.html
@@ -41,7 +41,7 @@
                                         {% load static %}
                                         <img src="{% static 'images/' %}{{ product.selected_product.product_id }}.jpg" alt="Image {{ product.selected_product.product_id }}" style="width:200px; height: 150px">
                                         <p style="margin-top: 10px">{{ product.name }}</p>
-                                        <p>Price: {{ product.price }}</p>
+                                        <p>Price: {{ product.price }}$</p>
                                         <p>Quantity: {{ product.selected_product.quantity }}</p>
                                         <div class="row row-cols-2 g-2">
                                             <div class="col">
